src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Active_Contact__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Collaborator_Of__c</fullName>
        <label>Collaborator Of</label>
        <picklist>
            <picklistValues>
                <fullName>AMNPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTL - NASCTN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTL - PSCR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTL - RFTD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTL - WND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITL - CSD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITL - NCCOE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITL - NICE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITL - NSTIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TPO</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>The NIST division that is dependent on the NIST OU.</description>
        <label>Division</label>
        <picklist>
            <controllingField>NIST_OU__c</controllingField>
            <picklistValues>
                <fullName>CSD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NICE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSTIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCCOE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SRD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calibrations</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Initial_NIST_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Initial NIST Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MS_Dynamics_ID_Cont__c</fullName>
        <description>MS_Dynamics_ID_Cont</description>
        <externalId>true</externalId>
        <label>Contact External Identifier</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MS_Dynamics_ID__c</fullName>
        <externalId>true</externalId>
        <label>Account External Identifier</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NIST_OU__c</fullName>
        <description>A list of all of the NIST Operating Units (OU).</description>
        <inlineHelpText>NIST Operating Unit (OU)</inlineHelpText>
        <label>NIST OU</label>
        <picklist>
            <picklistValues>
                <fullName>MEP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMNPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MML</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCNR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PML</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Private_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checking this box will make the Contact only visible by members of my group.</inlineHelpText>
        <label>Private Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referral_Identifer__c</fullName>
        <label>Referral Identifer</label>
        <picklist>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referral_Source__c</fullName>
        <description>Referral Source</description>
        <inlineHelpText>The source of the referral</inlineHelpText>
        <label>Referral Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Will_Participate_in_Workshops_Conferenc__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will participate in Workshops and Conferences</description>
        <inlineHelpText>Will participate in Workshops and Conferences</inlineHelpText>
        <label>Will Participate in Workshop/Conference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>scanbizcards__ScanBizCards__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this Contact was created by the ScanBizCards app.</description>
        <inlineHelpText>Indicates whether this Contact was created by the ScanBizCards app.</inlineHelpText>
        <label>ScanBizCards</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>Active_Contact__c</columns>
        <columns>Private_Contact__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>All_Staff_Associate_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Staff_Associate</value>
        </filters>
        <label>All Staff/Associate Contacts</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>My_Recent_Scanned_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>scanbizcards__ScanBizCards__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>My Recent Scanned Contacts</label>
    </listViews>
    <recordTypes>
        <fullName>Contact</fullName>
        <active>true</active>
        <description>Non-NIST Staff/Associate Contact records</description>
        <label>Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Staff_Associate</fullName>
        <active>true</active>
        <description>NIST Staff/Associate Contact records</description>
        <label>Staff/Associate</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Contact_Not_Record_Owner_Uncheck</fullName>
        <active>true</active>
        <description>Record owner can inactivate the contact.</description>
        <errorConditionFormula>AND(Active_Contact__c = FALSE,  $User.Id &lt;&gt; Owner.Id ,$Profile.Name &lt;&gt;&quot;System Administrator&quot;)</errorConditionFormula>
        <errorDisplayField>Active_Contact__c</errorDisplayField>
        <errorMessage>Only record owner can inactivate the contact.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Email_for_StaffAssociate_Contact_Record</fullName>
        <active>true</active>
        <description>Email address must be an @nist.gov email for the Staff/Associate Contact record.</description>
        <errorConditionFormula>AND( 
$RecordType.Name = &quot;Staff/Associate&quot;, 
NOT(CONTAINS( Email , &quot;@nist.gov&quot;)))</errorConditionFormula>
        <errorMessage>The email must be a valid NIST.GOV email address.</errorMessage>
    </validationRules>
</CustomObject>